# test_task

./: .env.example  config.py  main.py  pyproject.toml  test.txt  test1.txt
